src/style/index.css
/* ... */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/*  Product Gallery                                      */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
#product-gallery-section {
  flex-direction: column;
  margin-top: var(--vertical-section-spacings);
  margin-bottom: var(--vertical-section-spacings);
}

.product-toolbar,
.grid-container {
  font-family: "Inter", sans-serif;
}

.product-toolbar {
  align-items: center;

  h3 {
    font-size: 32px;
  }
}

.custom-select {
  position: relative;
  display: inline-block;

  select {
    background-color: var(--white);
    border: 0px;
    border-radius: 20px;
    outline: 0px;
    height: 40px;
    padding: 0 35px 0 20px;
    font-size: 20px;
    font-weight: 500;
    cursor: pointer;
    appearance: none;
  }
}

.custom-select::after {
  content: "";
  position: absolute;
  top: 16px;
  right: 15px;
  background-image: url('../media/icon-dropdown.png');
  background-repeat: no-repeat;
  background-size: contain;
  width: 15px;
  height: 15px;
  pointer-events: none;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  gap: 30px;

  a,
  a:visited {
    color: inherit;
    text-decoration: none;
  }
}

.grid-item {
  cursor: pointer;
  flex-direction: column;
  gap: 5px;
  mix-blend-mode: multiply;

  figure {
    background-color: var(--white);
    padding: 25px;
    height: 310px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all ease 0.8s;
    mix-blend-mode: multiply;

    img {
      mix-blend-mode: multiply;
    }

  }
}

.grid-product-info {
  flex-direction: column;
  gap: 5px;
  margin-top: 10px;

  p {
    line-height: 1.2;
  }

  p:first-of-type {
    font-weight: 500;
    /* Enables the use of -webkit-line-clamp and -webkit-box-orient */
    display: -webkit-box;
    /* Limits the element to a maximum of 2 lines */
    -webkit-line-clamp: 2;
    /* Defines the block progression, vertical means it stacks blocks vertically */
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    min-height: 39px;
  }

  p:nth-of-type(2) {
    font-weight: 400;
    color: var(--dark-gray);
  }

  p:last-of-type {
    font-weight: 500;
    font-size: 24px;
  }
}

.view-more-btn-wrapper {
  width: 100%;
}

.view-more-btn {
  font-weight: 600;
  font-size: 22px;
  padding: 13px 19px;
  background-color: var(--black);
  color: var(--white);
  width: 160px;
  height: 60px;
  align-content: center;
  border: none;
}

@media (max-width: 1000px) {
  .grid-container {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (max-width: 700px) {
  .grid-container {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}




/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/*  Gallery Animations                                   */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */

.gallery-image {
  transition: all ease 0.3s;
  width: 200px;
  height: 250px;
  object-fit: contain;
}

.gallery-image:hover {
  transform: scale(1.02, 1.02);
}







/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/*  Cart Page                                            */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */

.cart-container {
  display: flex;
  justify-content: space-between;

  margin-top: 20px;
  margin-bottom: 20px;
  gap: 20px;
}

.cart-sections {
  display: flex;
  gap: 25px;
}


.cart-shopping-bag {
  font-size: 42px;
  font-weight: 700;
  align-self: center;
  text-align: center;
  margin-top: var(--vertical-section-spacings);
}

.cart-subtitle {
  align-self: flex-start;
  font-size: 30px;
  font-weight: 700;
  margin-top: 20px;
}

.cart-item {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 10px;
  margin-bottom: 30px;
  padding-bottom: 20px;
  border-bottom: 1px solid var(--dark-gray);
}

.cart-item:last-child {
  border-bottom: none;
}

.cart-picture-box {
  min-width: 25%;
  width: 30%;
  margin-right: 10px;
}

.cart-info-box {
  width: 25%;
}

.cart-box {
  width: 15%;
  display: flex;
  flex-direction: column;
  gap: 4px;
}


.cart-item-img {
  width: 190px;
  height: 200px;
  object-fit: contain;
  padding: 23px 19px 23px 19px; 
  background-color: var(--white);
}

.cart-box-title {
  font-size: 16px;
  font-weight: 600;
}

.cart-title {
  font-size: 16px;
  font-weight: 600;
}

.cart-product-title {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: 77px;
}

.cart-total-price {
  font-weight: 400;
  font-size: 16px;
}

.cart-text {
  font-size: 16px;
  font-weight: 400;
}

.quantity h2 {
  font-size: 20px;
  font-weight: 700;
  margin-bottom: 8px;
}

.quantity-select {
  width: 56px;
  height: 34px;
  text-align: center;
  background-color: inherit;
  border: 1px solid var(--black);
}

.edit {
  color: var(--pinkish-red)
}

.underline-edit {
  font-weight: 600;
  text-decoration: underline;
  font-size: 16px;
  cursor: pointer;
}

.cart-trash-box {
  margin: 0 20px;
}

.trash-icon {
  width: 24px;
  height: 24px;
  cursor: pointer;
  background-image: url('../media/icon-trash-can.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  margin-top: 3px;
}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/*  Checkout                                             */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */

.cart-checkout-section {
  min-width: 695px;
  min-height: 1250px;
}

.checkout-section {
  background-color: var(--white);
  width: 360px;
  height: 658px;
  padding: 24px 23px;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.discounts {
  display: flex;
  justify-content: space-between;
  font-size: 16px;
  font-weight: 400;
  p:first-of-type {
    color: var(--dark-gray);
  }
  p {
    color: var(--black);
  }
}
/* ... */

